ADD_CUSTOM_TARGET( tests )
MACRO( ADD_GENFIT_TEST _testname )
   INCLUDE_DIRECTORIES( BEFORE  ../eventDisplay/include)
   ADD_EXECUTABLE( ${_testname} ${ARGN} )
   ADD_DEPENDENCIES( tests ${_testname} )
   TARGET_LINK_LIBRARIES( ${_testname} ../${PROJECT_NAME}  ${ROOT_LIBS} -lGeom )
    #INSTALL( TARGETS ${_testname} DESTINATION ${EXECUTABLE_INSTALL_DIR})
ENDMACRO( ADD_GENFIT_TEST )

ADD_GENFIT_TEST( fitterTests ./fitterTests/main.cpp ../eventDisplay/src/EventDisplay.cpp)
